# financial-accounts

./: .gitignore  .markdownlint.json  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE-APACHE  LICENSE-APACHE-2.0  LICENSE-MIT  LICENSE.txt  Makefile  README.md  changelog.Debian  copyright  cspell.json  debian.sh  demo-ledger.json  demo-ledger.ron  fin-stat.1.md  fin-stat.1.sh  fin-stat.desktop  financial-accounts.1  financial-accounts.1.dj  financial-accounts.1.md  financial-accounts.desktop  financial-accounts.md  test-ledger.ron  travis.yml
.cargo/: config.toml
.githooks/: pre-commit
debian/: build.sh  financial-accounts.desktop
icons/: fin-stat.kra
ohlc_response_macro/: Cargo.toml
ohlc_response_macro/src/: lib.rs
src/: account.rs  accounts.rs  app.rs  error.rs  file_picker.rs  ledger.rs  lib.rs  main.rs  message.rs  transaction.rs
src/app/: accounts.rs  chart.rs  command_line.rs  crypto.rs  crypto2.rs  file_picker.rs  houses.rs  import_boa.rs  message.rs  metal.rs  metals.rs  mod.rs  money.rs  mutual_fund.rs  mutual_funds.rs  screen.rs  solarized.rs  stocks.rs  ticker.rs  zillow_cookies.rs
src/app/account/: mod.rs  transaction.rs  transactions.rs  transactions_secondary.rs
src/app/accounts/: account.rs
supply-chain/: audits.toml  config.toml
