[package]
name = "financial-accounts"
description = "Application for tracking your finances."
version = "0.2.0"
authors = ["David Campbell <dcampbell24@gmail.com>"]
edition = "2021"
rust-version = "1.81"
license = "MIT OR Apache-2.0"
keywords = ["finance"]
categories = ["finance"]
homepage = "https://github.com/dcampbell24/financial-accounts"
documentation = "https://docs.rs/financial-accounts"
repository = "https://github.com/dcampbell24/financial-accounts"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
clap_lex = "0.7"
csv = "1"
fs4 = { version ="0.9", features = ["sync"] }
futures = "0.3"
home = "0.5"
iced = { version = "0.12", features = ["async-std", "canvas", "tokio"] }
plotters = "0.3"
plotters-iced = "0.10"
regex = "1"
reqwest = "0.12"
rfd = { version = "0.14", default-features = false, features = ["xdg-portal", "tokio"] }
ron = "0.8"
rust_decimal = "1"
rust_decimal_macros = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thousands = "0.2"
webbrowser = "1"
yahoo_finance_api = { version = "2", features = ["decimal"] }

[package.metadata.deb]
maintainer = "David Campbell <dcampbell24@gmail.com>"
assets = [
    ["target/release/financial-accounts", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/financial-accounts/", "644"],
    ["financial-accounts.1.gz", "usr/share/man/man1/", "644"],
    ["financial-accounts.desktop", "usr/share/applications/", "644"],
    ["icons/financial-accounts_16x16.png", "usr/share/icons/hicolor/16x16/apps/financial-accounts.png", "644"],
    ["icons/financial-accounts_22x22.png", "usr/share/icons/hicolor/22x22/apps/financial-accounts.png", "644"],
    ["icons/financial-accounts_24x24.png", "usr/share/icons/hicolor/24x24/apps/financial-accounts.png", "644"],
    ["icons/financial-accounts_32x32.png", "usr/share/icons/hicolor/32x32/apps/financial-accounts.png", "644"],
    ["icons/financial-accounts_42x42.png", "usr/share/icons/hicolor/42x42/apps/financial-accounts.png", "644"],
    ["icons/financial-accounts_64x64.png", "usr/share/icons/hicolor/64x64/apps/financial-accounts.png", "644"],
    ["icons/financial-accounts_128x128.png", "usr/share/icons/hicolor/128x128/apps/financial-accounts.png", "644"],
]
changelog = "changelog.Debian"
depends = "$auto, xdg-desktop-portal-kde (>= 5.27.5-2) | xdg-desktop-portal-gtk (>= 1.14.1-1) | xdg-desktop-portal-gnome (>= 43.1-2)"
section = "misc"
